# serial_parser

./: .gitignore  README.md
c_lang/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile
c_lang/cmake/: cpack.cmake  settings.cmake
c_lang/inc/: CMakeLists.txt  command_handler.h  crc16.h  serial_parser.h
c_lang/inc/serial_parser/: serial_parser.h
c_lang/inc/serial_parser/misc/: crc16.h  endian_helper.h
c_lang/src/: CMakeLists.txt  command_handler.c  crc16.c  serial_parser.c
c_lang/src/enumkv/: enumkv.c  enumkv.h
c_lang/src/serialhex2struct/: serialhex2struct.c  serialhex2struct.h
c_lang/tests/: CMakeLists.txt  command_handler.c  crc16.c  endian_conv.c  helloworld.c  serial_parsing.c  testing_helper.h
python/: serial_parser.py
python/tests/: test_serial_parser.py
