FILE(GLOB_RECURSE src_files "*.c")

ADD_LIBRARY(${PROJECT_NAME} STATIC ${src_files})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC "${PROJECT_SOURCE_DIR}/inc")

INSTALL(TARGETS ${PROJECT_NAME}
        PUBLIC_HEADER DESTINATION include
        ARCHIVE DESTINATION lib
    )
# add source code packing support.
