FILE(GLOB_RECURSE src_files "./*.c")

SET(LIB_NAME SerialParser)

ADD_LIBRARY(${LIB_NAME} STATIC ${src_files})
TARGET_INCLUDE_DIRECTORIES(${LIB_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../inc")

INSTALL(TARGETS ${LIB_NAME}
        PUBLIC_HEADER DESTINATION include
        ARCHIVE DESTINATION lib
    )
# add source code packing support.
